package com.directi.training.dip.exercise_refractored;

import java.io.IOException;

public interface IReader
{
    String read() throws IOException;
}
